--- a/templates/home.html
+++ b/templates/home.html
@@ -2,25 +2,105 @@
 {% load static %}
 <!-- main content -->
 {% block content %}
-    <div class="container">
-        <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
-          <div class="text-center">
-            <img
-              class="mb-4"
-              src="https://mdbootstrap.com/img/logo/mdb-transparent-250px.png"
-              style="width: 250px; height: 90px"
-            />
-            <h5 class="mb-3">Thank you for using our product. We're glad you're with us.</h5>
-            <p class="mb-3">MDB Team</p>
-            <a
-              class="btn btn-primary btn-lg"
-              href="https://mdbootstrap.com/docs/standard/getting-started/"
-              target="_blank"
-              role="button"
-              >Start MDB tutorial</a
-            >
+  <div class="container">
+    <h3 class="text-center card p-2 mt-2">BD Onlne shop</h3>
+    <!--Section: Products v.3-->
+    <section class="text-center mb-4">
+
+      <!--Grid row-->
+      <div class="row wow fadeIn">
+
+        <!--Start product grid column-->
+        
+        {% for obj in object_list %}
+          <div class="col-lg-3 col-md-6 mb-4">
+
+            <!--Card-->
+            <div class="card">
+
+              <!--Card image-->
+              <div class="view overlay">
+                <img src="{{ obj.image.url }}" class="card-img-top"
+                  alt="">
+                <a>
+                  <div class="mask rgba-white-slight"></div>
+                </a>
+              </div>
+              <!--Card image-->
+
+              <!--Card content-->
+              <div class="card-body text-center">
+                <!--Category & Title-->
+                <a href="{% url 'shop:product_detail' slug=obj.slug %}" class="grey-text">
+                  <h5>{{ obj.title }}</h5>
+                </a>
+                <h5>
+                  <strong>
+                    <a href="" class="dark-grey-text">{{ obj.category }}</a>
+                  </strong>
+                </h5>
+
+                <h4 class="font-weight-bold blue-text">
+                  <strong>{{ obj.price }}$</strong>
+                </h4>
+
+              </div>
+              <!--Card content-->
+
+            </div>
+            <!--Card-->
+
           </div>
-        </div>
+        {% endfor %}
+          
+        <!--End product grid column-->
+
       </div>
+      <!--Grid row-->
+
+    </section>
+    <!--Section: Products v.3-->
+
+    <!--Pagination-->
+    <nav class="d-flex justify-content-center wow fadeIn">
+      <ul class="pagination pg-blue">
+
+        <!--Arrow left-->
+        <li class="page-item disabled">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+          </a>
+        </li>
+
+        <li class="page-item active">
+          <a class="page-link" href="#">1
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">2</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">3</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">4</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">5</a>
+        </li>
+
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!--Pagination-->
+
+  </div>
 {% endblock content %} 
 <!-- End main content -->
