--- a/templates/snippets/navbar.html
+++ b/templates/snippets/navbar.html
@@ -1,20 +1,20 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light white">
     <div class="container">
         <ul class="navbar-nav d-flex flex-row">
             <!-- navbar logo -->
             <li class="nav-item me-3 me-lg-0">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/">
                     BD Onlne shop
                 </a>
             </li>
             <!-- Page link -->
             <li class="nav-item me-3 me-lg-0">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/">
                     Home
                 </a>
             </li>
             <li class="nav-item me-3 me-lg-0">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{% url 'shop:shop' %}">
                     shop
                 </a>
             </li>
@@ -27,9 +27,9 @@
         <ul class="navbar-nav d-flex flex-row">
             <!-- Icons -->
             <li class="nav-item me-3 me-lg-0">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{% url 'order:cart_details' %}">
                     <i class="fas fa-shopping-cart"></i>
-                    <span class="badge rounded-pill badge-notification bg-danger">1</span>
+                    <span class="badge bg-danger badge-dot">1</span>
                 </a>
             </li>
             <li class="nav-item me-3 me-lg-0">
