Add some static files.

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,42 +1,64 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-  <div class="container">
-    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-      <div class="text-center">
-        <h2>Release surprise! </h2>
-        <p class="h4 fw-bold">50% OFF MDB PRO</p>
-        <div class="row justify-content-center">
-          <div class="col-md-6">
-            <img src="https://mdbootstrap.com/img/Marketing/campaigns/50off-SJARV.png" class="img-fluid" alt="" />
-          </div>
-        </div>
-
-        <h5 class="mb-3">Use this coupon code before it expires and claim the reward</h5>
-        <p class="mb-3">The coupon code will be valid until the end of the week</p>
-
-        <div class="mt-2">
-
-          <!--Coupon code-->
-          <code class="h2 border rounded py-1 px-5 flex-item me-2">T9TTVSQB</code>
-          <br>
-
-          <!--Copy to clipboard-->
-
-          <a id="disc-50" href="#" type="button" class="btn-lg btn-info" style="background-color: #009FE7;">COPY TO
-            CLIPBOARD <i class="far fa-copy ml-2"></i></a>
-          <a class="btn btn-outline-primary btn-lg mt-3" href="https://mdbootstrap.com/docs/standard/getting-started/"
-            target="_blank" style="border-color: #009FE7; color: #009FE7;" role="button">Start MDB tutorial</a>
+    <div class="container my-5 py-5">
 
 
-        </div>
-        <p>See <a href="https://mdbootstrap.com/pro/">prices</a></p>
-        <div class=" my-2 alert alert-success" id="code-success" style="display: none;">
-          Copied
-        </div>
+        <!--Section: Content-->
+        <section class="text-center">
 
-      </div>
+
+            <!--Grid row-->
+            <div class="row">
+
+                
+                {% for obj in object_list %}
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-12 mb-4">
+    
+                        <!-- Card -->
+                        <div class="card">
+    
+                            <!-- Card image -->
+                            <div class="view overlay">
+                                <img class="card-img-top"
+                                    src="{{ obj.image.url }}">
+                                <a href="{% url 'shop:product_detail' slug=obj.slug %}">
+                                    <div class="mask rgba-white-slight"></div>
+                                </a>
+                            </div>
+    
+                            <!-- Card content -->
+                            <div class="card-body">
+    
+                                <p class="mb-1"><a href="{% url 'shop:product_detail' slug=obj.slug %}" class="font-weight-bold black-text">{{ obj.title }}</a></p>
+    
+                                <p class="mb-1"><small class="mr-1"><s>${{ obj.discount_price }}</s></small><strong>${{ obj.price }}</strong></p>
+    
+                                <span class="text-center">
+                                    <a href="{% url 'order:add_item_to_cart' slug=obj.slug %}"ta-toggle="tooltip" data-placement="top" title="Add to Cart">
+                                      <i class="fas fa-shopping-cart ml-3"></i>
+                                    </a>
+                                  </span>
+    
+                            </div>
+    
+                        </div>
+                        <!-- Card -->
+    
+    
+                    </div>
+                    <!--Grid column-->
+                {% endfor %}
+                    
+
+            </div>
+            <!--Grid row-->
+
+
+        </section>
+        <!--Section: Content-->
+
+
     </div>
-  </div>
 {% endblock content %}
-  
