--- a/templates/base.html
+++ b/templates/base.html
@@ -39,9 +39,10 @@
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
-    <!-- Your custom scripts (optional) -->
-    <script type="text/javascript">
-      console.log('My code working.')
+    {% block javascript %}
+    <script type='text/javascript'>
+      
     </script>
+  {% endblock javascript %}
   </body>
 </html>
