--- a/templates/shop/single-product.html
+++ b/templates/shop/single-product.html
@@ -2,117 +2,216 @@
 {% load static %}
 {% block head_title %}Shop{% endblock head_title %}
 {% block content %}
-  <div class="container dark-grey-text mt-5">
+  <div class="container my-5 py-5 z-depth-1">
 
-    <!--Grid row-->
-    <div class="row wow fadeIn">
 
-      <!--Grid column-->
-      <div class="col-md-6 mb-4">
+    <!--Section: Content-->
+    <section class="text-center">
 
-        <img src="{{ object.image.url }}" class="img-fluid" alt="">
+      <!-- Section heading -->
+      <h3 class="font-weight-bold mb-5">Product Details</h3>
 
-      </div>
-      <!--Grid column-->
+      <div class="row">
 
-      <!--Grid column-->
-      <div class="col-md-6 mb-4">
+        <div class="col-lg-6">
 
-        <!--Content-->
-        <div class="p-4">
+          <!--Carousel Wrapper-->
+          <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
 
-          <div class="mb-3">
-            <a href="">
-              <span class="badge purple mr-1">{{ object.category }}</span>
+            <!--Slides-->
+            <div class="carousel-inner text-center text-md-left" role="listbox">
+              <div class="carousel-item active">
+                <img src="{{ object.image.url }}" alt="First slide"
+                  class="img-fluid">
+              </div>
+              {% for image in object.productimages_set.all %}
+                <div class="carousel-item">
+                  <img src="{{ image.images.url }}" alt="First slide"
+                    class="img-fluid">
+                </div>
+              {% endfor %}
+                
+            </div>
+            <!--/.Slides-->
+
+            <!--Thumbnails-->
+            <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
             </a>
-            <a href="">
-              <span class="badge blue mr-1">New</span>
+            <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
             </a>
-            <a href="">
-              <span class="badge red mr-1">Bestseller</span>
-            </a>
+            <!--/.Thumbnails-->
+
           </div>
-
-          <p class="lead">
-            <span class="mr-1">
-              <del style='font-size: 14px;'>Discount price ${{ object.discount_price }}</del>
-            </span>
-            <span>${{ object.price }}</span>
-          </p>
-
-          <p class="lead font-weight-bold">Description</p>
-
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolor suscipit libero eos atque quia ipsa
-            sint voluptatibus!
-            Beatae sit assumenda asperiores iure at maxime atque repellendus maiores quia sapiente.</p>
-
-          <form class="d-flex justify-content-left">
-            <!-- Default input -->
-            <input type="number" value="1" aria-label="Search" class="form-control" style="width: 100px">
-            <a href="{% url 'order:add_item_to_cart' slug=object.slug %}" class="btn btn-primary btn-md my-0 p">Add to cart
-              <i class="fas fa-shopping-cart ml-1"></i>
-            </a>
-
-          </form>
+          <!--/.Carousel Wrapper-->
 
         </div>
-        <!--Content-->
+
+        <div class="col-lg-5 text-center text-md-left">
+
+          <h2
+            class="h2-responsive text-center text-md-left product-name font-weight-bold dark-grey-text mb-1 ml-xl-0 ml-4">
+            <strong>{{ object.title }}</strong>
+          </h2>
+          <span class="badge badge-warning product mb-4 ml-xl-0 ml-4">Brand</span>
+          <span class="badge badge-success product mb-4 ml-xl-0 ml-4">Category</span>
+          <span class="badge badge-danger product mb-4 ml-xl-0 ml-4">bestseller</span>
+          <h3 class="h3-responsive text-center text-md-left mb-5 ml-xl-0 ml-4">
+            <span class="red-text font-weight-bold">
+              <strong>${{ object.price }}</strong>
+            </span>
+            <span class="grey-text">
+              <small>
+                <s>${{ object.discount_price }}</s>
+              </small>
+            </span>
+          </h3>
+
+          <!--Accordion wrapper-->
+          <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
+
+            <!-- Accordion card -->
+            <div class="card">
+
+              <!-- Card header -->
+              <div class="card-header" role="tab" id="headingOne1">
+                <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true"
+                  aria-controls="collapseOne1">
+                  <h5 class="mb-0">
+                    Description
+                    <i class="fas fa-angle-down rotate-icon"></i>
+                  </h5>
+                </a>
+              </div>
+
+              <!-- Card body -->
+              <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1"
+                data-parent="#accordionEx">
+                <div class="card-body">
+                  {{ object.discription | safe }}
+                </div>
+              </div>
+            </div>
+            <!-- Accordion card -->
+
+            <!-- Accordion card -->
+            <div class="card">
+
+              <!-- Card header -->
+              <div class="card-header" role="tab" id="headingTwo2">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2"
+                  aria-expanded="false" aria-controls="collapseTwo2">
+                  <h5 class="mb-0">
+                    Details
+                    <i class="fas fa-angle-down rotate-icon"></i>
+                  </h5>
+                </a>
+              </div>
+
+              <!-- Card body -->
+              <div id="collapseTwo2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2"
+                data-parent="#accordionEx">
+                <div class="card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                  3 wolf moon officia aute,
+                  non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+                  moon
+                  tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                </div>
+              </div>
+            </div>
+            <!-- Accordion card -->
+
+            <!-- Accordion card -->
+            <div class="card">
+
+              <!-- Card header -->
+              <div class="card-header" role="tab" id="headingThree3">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3"
+                  aria-expanded="false" aria-controls="collapseThree3">
+                  <h5 class="mb-0">
+                    Shipping
+                    <i class="fas fa-angle-down rotate-icon"></i>
+                  </h5>
+                </a>
+              </div>
+
+              <!-- Card body -->
+              <div id="collapseThree3" class="collapse" role="tabpanel" aria-labelledby="headingThree3"
+                data-parent="#accordionEx">
+                <div class="card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                  3 wolf moon officia aute,
+                  non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf
+                  moon
+                  tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                </div>
+              </div>
+            </div>
+            <!-- Accordion card -->
+
+          </div>
+          <!--/.Accordion wrapper-->
+
+          <!-- Add to Cart -->
+          <section class="color">
+            <div class="mt-5">
+              <p class="grey-text">Choose your color</p>
+              <div class="row text-center text-md-left">
+
+                <div class="col-md-4 col-12">
+                  <!--Radio group-->
+                  <div class="form-group">
+                    <input class="form-check-input" name="group100" type="radio" id="radio100" checked="checked">
+                    <label for="radio100" class="form-check-label dark-grey-text">Blue</label>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <!--Radio group-->
+                  <div class="form-group">
+                    <input class="form-check-input" name="group100" type="radio" id="radio101">
+                    <label for="radio101" class="form-check-label dark-grey-text">Orange</label>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <!--Radio group-->
+                  <div class="form-group">
+                    <input class="form-check-input" name="group100" type="radio" id="radio102">
+                    <label for="radio102" class="form-check-label dark-grey-text">Red</label>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row mt-3">
+                <div class="col-md-12 text-center text-md-left text-md-right">
+                  <button class="btn btn-primary btn-rounded">
+                    <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> Add to cart</button>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- /.Add to Cart -->
+
+        </div>
 
       </div>
-      <!--Grid column-->
 
-    </div>
-    <!--Grid row-->
+    </section>
+    <!--Section: Content-->
 
-    <hr>
-
-    <!--Grid row-->
-    <div class="row d-flex justify-content-center wow fadeIn">
-
-      <!--Grid column-->
-      <div class="col-md-6 text-center">
-
-        <h4 class="my-4 h4">Additional information</h4>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus suscipit modi sapiente illo soluta odit
-          voluptates,
-          quibusdam officia. Neque quibusdam quas a quis porro? Molestias illo neque eum in laborum.</p>
-
-      </div>
-      <!--Grid column-->
-
-    </div>
-    <!--Grid row-->
-
-    <!--Grid row-->
-    <div class="row wow fadeIn">
-
-      <!--Grid column-->
-      <div class="col-lg-4 col-md-12 mb-4">
-
-        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/11.jpg" class="img-fluid" alt="">
-
-      </div>
-      <!--Grid column-->
-
-      <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
-
-        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/12.jpg" class="img-fluid" alt="">
-
-      </div>
-      <!--Grid column-->
-
-      <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
-
-        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/13.jpg" class="img-fluid" alt="">
-
-      </div>
-      <!--Grid column-->
-
-    </div>
-    <!--Grid row-->
 
   </div>
 {% endblock content %}
+
+{% block javascript %}
+<script type='text/javascript'>
+  // MDB Lightbox Init
+  $(function () {
+    $("#mdb-lightbox-ui").load("mdb-addons/mdb-lightbox-ui.html");
+  });
+  console.log('working your javascript section.')
+</script>
+{% endblock javascript %}
